Fixed a problem: text not showing in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -199,6 +199,10 @@
 }
 
 #skills {
+  button {
+    color: black;
+  }
+
   form .container {
     display: flex;
 
